===================================================
[B]ZattooHiQ v1.7.0.8 [/B]26.02.2020 Steffen Rolapp
===================================================
- Fehler beim Erstellen behoben

===================================================
[B]ZattooHiQ v1.7.0.7 [/B]18.02.2020 Steffen Rolapp
===================================================
- Dolby Digital Unterstüzung hinzugefügt
- Zattoo Urls angepasst

===================================================
[B]ZattooHiQ v1.7.0 [/B]14.04.2019 Steffen Rolapp
===================================================
- Streamtype um dash_widewine erweitert
- Suche überarbeitet

===================================================
[B]ZattooHiQ v1.6.9.8 [/B]24.03.2019 Steffen Rolapp
===================================================
- Url für Vorschaubilder geändert
- Falsche Anfangszeiten bei Sommerzeit in den Aufnahmen gefixt

===================================================
[B]ZattooHiQ v1.6.9.6 [/B]17.03.2019 Steffen Rolapp
===================================================
- Fehler bei Salt.Tv behoben

===================================================
[B]ZattooHiQ v1.6.9.5 [/B]15.03.2019 Steffen Rolapp
===================================================
- url von vorschaubild geändert

==================================================
[B]ZattooHiQ v1.6.9 [/B]17.02.2019 Steffen Rolapp
==================================================
- Kodi Player OSD über Longpress Return zu erreichen
- WidgetProblem bei Aeon Silvo behoben
- EPG Datums Eingabe exit wenn heute
- Settings können im Hauptmenu angezeigt werden
- Aufnahmen nur wenn im Abo
- 1und1 als Reseller hinzugefügt
- EPG überarbeitet

==================================================
[B]ZattooHiQ v1.6.8 [/B]23.09.2018 Steffen Rolapp
==================================================
- Fehler in der Suche ist behoben
- Salt.tv als Reseller eingefügt
- default für Aufnahme Format eingefügt
- Das laden der Programminfos im Hintergrund überarbeitet