@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.zattoo_hiq" version="2.0.9" name="Zattoo HiQ [COLOR FF00EE00](neu)[/COLOR]" provider-name="Steffen Rolapp">
+<addon id="plugin.video.zattoo_hiq" version="2.0.10" name="Zattoo HiQ" provider-name="Steffen Rolapp">
   <requires>
     <import addon="xbmc.python" version="2.25.0"/>
     <import addon="xbmc.addon" version="13.0.0" />
@@ -39,7 +39,7 @@ Zattoo Live TV, Aufnahmen und EPG
    <platform>all</platform>
     <language></language>
     <news>
-        Change Code to Kodi Guidelines
+        Zattoo Video on Demand hinzugefügt
     </news>
     <license>GNU GENERAL PUBLIC LICENSEVersion 3, 29 June 2007</license>
     <source>https://github.com/rolapp/plugin.video.zattoo_hiq</source>
